# cli_mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
cli_chat/: Dockerfile  pyproject.toml
cli_chat/cli_chat/: anthropic_host.py  config.py  input_parser.py  main.py  mcp_client.py
docs/: architecture.md  ideas.md  notes.md  project-overview.md  shopping-list.txt  todo.txt  travel-plans.txt
inspector/: Dockerfile
mcp_server/: Dockerfile  pyproject.toml
mcp_server/mcp_server/: __main__.py  app.py  store.py
openspec/changes/add-mcp-doc-chat-sandbox/: design.md  proposal.md  tasks.md
openspec/changes/add-mcp-doc-chat-sandbox/specs/containerized-runtime/: spec.md
openspec/changes/add-mcp-doc-chat-sandbox/specs/mcp-cli-host/: spec.md
openspec/changes/add-mcp-doc-chat-sandbox/specs/mcp-doc-server/: spec.md
