[project]
name = "cli-chat"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.6.0,<2.0.0",
    "anthropic>=0.40.0,<1.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli_chat"]
